; ModuleID = '/home/carl/AnghaBench/micropython/extmod/nimble/nimble/extr_npl_os.c_ble_npl_sem_init.c'
source_filename = "/home/carl/AnghaBench/micropython/extmod/nimble/nimble/extr_npl_os.c_ble_npl_sem_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ble_npl_sem = type { i64 }

@.str = private unnamed_addr constant [26 x i8] c"ble_npl_sem_init(%p, %u)\0A\00", align 1
@BLE_NPL_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ble_npl_sem_init(%struct.ble_npl_sem* %0, i64 %1) #0 {
  %3 = alloca %struct.ble_npl_sem*, align 8
  %4 = alloca i64, align 8
  store %struct.ble_npl_sem* %0, %struct.ble_npl_sem** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.ble_npl_sem*, %struct.ble_npl_sem** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = trunc i64 %6 to i32
  %8 = call i32 @DEBUG_SEM_printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), %struct.ble_npl_sem* %5, i32 %7)
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.ble_npl_sem*, %struct.ble_npl_sem** %3, align 8
  %11 = getelementptr inbounds %struct.ble_npl_sem, %struct.ble_npl_sem* %10, i32 0, i32 0
  store i64 %9, i64* %11, align 8
  %12 = load i32, i32* @BLE_NPL_OK, align 4
  ret i32 %12
}

declare dso_local i32 @DEBUG_SEM_printf(i8*, %struct.ble_npl_sem*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
